# baxter_react_controller

./: .travis.yml  CMakeLists.txt  Dockerfile  FindIPOPT.cmake  README.md  ant-designs?organization=oscarg933&organization=oscarg933  dependencies.rosinstall  package.xml
cmake/Modules/: FindIPOPT.cmake
launch/: baxter_react_controller.launch  baxter_urdf.launch
lib/: CMakeLists.txt
lib/include/react_controller/: avoidance.h  avoidanceHandler.h  baxterChain.h  controllerNLP.h  ctrlThread.h  mathUtils.h  reactCtrlThread.h  reactIpOpt.h  react_control_utils.h
lib/src/CoinIpopt/: configure.ac  package.xml
lib/src/CoinIpopt/BuildTools/: coin.m4
lib/src/CoinIpopt/Ipopt/: configure.ac
lib/src/react_controller/: avoidance.cpp  avoidanceHandler.cpp  baxterChain.cpp  collisionPoints.cpp  controllerNLP.cpp  ctrlThread.cpp  mathUtils.cpp  reactCtrlThread.cpp  reactIpOpt.cpp  react_control_utils.cpp
src/: baxter_react_controller.cpp
test/: baxter_sdk_control.launch  baxter_world.launch  test_baxterchain.cpp  test_baxterchain.launch  test_baxterchain.test  test_ipopt.cpp  test_ipopt.launch  test_ipopt.test  test_react_controller.cpp  test_react_controller.launch  test_react_controller.test  test_utils.cpp
