<?xml version="1.0"?>
<package>
  <name>IPOPT</name>
  <version>1.0</version>
  <description>The ipopt package</description>

  <maintainer email="brahm.gardner@yale.edu">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>boost</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>catkin</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>